about us page changes

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -2,11 +2,32 @@
 <!-- FAQ Section START -->
 <div class="section-block-grey">
 	<div class="container">
-        <div class="section-heading pb-3">
-			<h4>About Cuttle Card</h4>
-		</div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="gradient-left-border">
+                    <div class="section-heading">
+                        <span>Find the Best Talent Faster</span>
+                        <h4>About Cuttle Card</h4>
+                        <div class="text-content">
+                            <p>Cuttle Card is operated by Cuttle Card Co., Ltd., which has a clear and legal operating entity and meets information security requirements and KYC/AML standards. Through the cuttle card, you can spend with high privacy and flexibility. You can spend on the global Mastercard network, withdraw cash at ATMs, or make large purchases at will.</p>
+                            <p>After the cardholder injects assets, the available credit line is provided to the credit card at a mortgage rate of up to 90%. Chow Kai Pong Law Firm has suggested under Chapter 163 of the Money Lenders Ordinance (the "Ordinance") that virtual assets can also be used as one of the collateral assets. After customers consume, they can repay in cash, account transfer or by deducting collateral.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div>
+                    <!-- <img src="../../assets/img/gif/growth_platform.mp4" alt="about_cuttle"> -->
+                     <video class="img-fluid" autoplay loop muted playsinline>
+                        <source src="../../assets/img/gif/balance_transfer.mp4" type="video/mp4">
+                     </video>
+                </div>
+            </div>
+        </div>     
+
+
 			
-		<div class="row mt-40">
+		<!-- <div class="row mt-40">
 			<div class="col-md-12 col-sm-6 col-xs-12">
 				<div class="pr-30-md">
                     <div class="accordion" id="accordionExample">
@@ -48,7 +69,90 @@
 				</div>
 			</div>	
      
+		</div> -->
+	</div>
+
+    
+</div>
+
+<div class="section-block-grey pt-1">
+	<div class="container">
+        <div class="row align-items-center">
+            
+            <div class="col-md-6">
+                <div>
+                     <video class="img-fluid" autoplay loop muted playsinline>
+                        <source src="../../assets/img/gif/growth_platform.mp4" type="video/mp4">
+                     </video>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="gradient-right-border">
+                    <div class="section-heading">
+                        <span>OUR#1 GLOBAL GROWTH PLATEFORM </span>
+                        <h4>About Cuttle Card</h4>
+                        <div class="text-content">
+                            <p class="mb-0">After customers complete the top-up of collateral to the cuttle card, they can use the credit limit to make purchases through the Mastercard network, withdraw cash from ATMs, or bind it to payment channels such as Alipay and WeChat Pay, so that assets can be used flexibly.</p>
+                            <p class="mb-0">The single consumption limit of cuttle card Mastercard can be increased to a 1-to-1 ratio according to the asset value, allowing customers to spend worry-free luxury goods in more than 200 countries and regions around the world. </p>
+                            <p class="mb-0">Together with Mastercard's account information encryption technology, it can effectively prevent risks such as credit card theft and credit card duplication, improve the security of credit card transactions, and allow cardholders to make large purchases with peace of mind.</p>
+                            <p class="mb-0">Money Lender License Number <br> 
+                                Hong Kong Capital Limited 2360/2022</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>    
+	</div>
+
+    
+</div>
+
+
+
+
+<!-- Counters Section START -->
+<div class="section-block-parallax section-md" style="background-image: url(../../assets/img/clients-bg.png);">
+	<div class="container">
+		<div class="row">
+			<!-- <div class="col-md-5 col-sm-5 col-xs-12">
+				<div class="section-heading white-color mt-15">
+					<span>Gain a Success with Us !</span>
+					<h3>We are always Reliable !</h3>
+					<div class="section-heading-line-left"></div>
+				</div>				
+			</div> -->
+			<div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-8 col-sm-7 col-xs-12">
+                        <div class="row">
+                            <div class="col-md-4 col-sm-4 col-xs-12">
+                                <div class="counter-box white-color">
+                                    <h4 class="countup">12</h4>
+                                    <p>Blogs Published</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-12">
+                                <div class="counter-box white-color">
+                                    <h4 class="countup">18</h4>
+                                    <p>Views on Finsweet</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-12">
+                                <div class="counter-box white-color">
+                                    <h4 class="countup">30</h4>
+                                    <p>Total active Users</p>
+                                </div>
+                            </div>													
+                        </div>
+                    </div>
+                </div>
+            </div>
 		</div>
 	</div>
 </div>
+<!-- Counters Section END -->
+
+
+
 <app-footer></app-footer>
