integrated all apis

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -32,7 +32,7 @@
                                     </svg>
                                     
                             </span>
-                            contact&#64;cuttlecard.com</a></li>
+                            {{companyData.EMAIL}}</a></li>
                         <li><a href="#">
                             <span>
                                 <svg width="14" height="20" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -40,7 +40,7 @@
                                     </svg>
                                     
                             </span>
-                            +(852) 8170 044</a></li>
+                            {{companyData.PHONE}}</a></li>
                         <li><a href="#"> 
                             <span>
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
