--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -21,7 +21,8 @@
                                         fill="#96A1C2" />
                                 </svg>
                             </span>
-                            contact&#64;cuttlecard.com</a>
+                            {{companyData.EMAIL}}
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
@@ -33,7 +34,7 @@
                                         fill="#96A1C2" />
                                 </svg>
                             </span>
-                            {{profileData.phone}}</a>
+                            {{companyData.PHONE}}</a>
                     </li>
                 </ul>
             </div>
@@ -47,9 +48,8 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" aria-current="page" (click)="redirectTo('landing')" 
-                    routerLinkActive="router-link-active"
-                    [ngClass]="{'active': route.url.includes('landing')}">
+                    <a class="navbar-brand" aria-current="page" (click)="redirectTo('landing')"
+                        routerLinkActive="router-link-active" [ngClass]="{'active': route.url.includes('landing')}">
                         <img src="assets/img/logo.png" alt="Bootstrap" width="100%" height="100%">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -59,26 +59,28 @@
                         </span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                       <ng-container *ngIf="!isLoggedInUser; else dashboard">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" (click)="redirectTo('landing')" 
-                                    routerLinkActive="router-link-active"
-                                    [ngClass]="{'active': route.url.includes('landing')}">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" [ngClass]="{'active': route.url.includes('help-center')}" (click)="redirectTo('help-center')">Help Center</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" [ngClass]="{'active': route.url.includes('about-us')}" (click)="redirectTo('about-us')">About us</a>
-                            </li>
-                            <li class="nav-item d-block d-sm-block d-md-block d-lg-none">
-                                <a class="nav-link" (click)="redirectTo('/auth/login')">Login</a>
-                            </li>
-                            <li class="nav-item d-block d-sm-block d-md-block d-lg-none">
-                                <a class="nav-link" (click)="redirectTo('/auth/register')">Apply Now</a>
-                            </li>
-                            <!-- <li class="nav-item dropdown">
+                        <ng-container *ngIf="!isLoggedInUser; else dashboard">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" (click)="redirectTo('landing')"
+                                        routerLinkActive="router-link-active"
+                                        [ngClass]="{'active': route.url.includes('landing')}">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" [ngClass]="{'active': route.url.includes('help-center')}"
+                                        (click)="redirectTo('help-center')">Help Center</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" [ngClass]="{'active': route.url.includes('about-us')}"
+                                        (click)="redirectTo('about-us')">About us</a>
+                                </li>
+                                <li *ngIf="!isLoggedInUser" class="nav-item d-block d-sm-block d-md-block d-lg-none">
+                                    <a class="nav-link" (click)="redirectTo('/auth/login')">Login</a>
+                                </li>
+                                <li *ngIf="!isLoggedInUser" class="nav-item d-block d-sm-block d-md-block d-lg-none">
+                                    <a class="nav-link" (click)="redirectTo('/auth/register')">Apply Now</a>
+                                </li>
+                                <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
                                     Dropdown
@@ -92,74 +94,76 @@
                                     <li><a class="dropdown-item" href="#">Something else here</a></li>
                                 </ul>
                             </li> -->
-                        </ul>
+                            </ul>
 
-                        <div class="d-flex d-none d-lg-block">
-                            <button (click)="redirectTo('/auth/login')" class="btn btn-dark-cuttle btn-sm" >Login</button>
-                            <button (click)="redirectTo('/auth/register')" class="btn btn-light-cuttle btn-sm" >Apply Now</button>
-                        </div>
-                       </ng-container>
-                       <ng-template #dashboard>
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
+                            <div class="d-flex d-none d-lg-block">
+                                <button *ngIf="!isLoggedInUser" (click)="redirectTo('/auth/login')"
+                                    class="btn btn-dark-cuttle btn-sm">Login</button>
+                                <button *ngIf="!isLoggedInUser" (click)="redirectTo('/auth/register')"
+                                    class="btn btn-light-cuttle btn-sm">Apply Now</button>
+                            </div>
+                        </ng-container>
+                        <ng-template #dashboard>
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
 
-                            <li class="nav-item dropdown">
-                                <a href="" class="nav-link" id="notificationDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                     <!-- <i class="bi bi-bell"></i>  -->
-                                    <span>
-                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M12.0199 20.53C9.68987 20.53 7.35987 20.16 5.14987 19.42C4.30987 19.13 3.66987 18.54 3.38987 17.77C3.09987 17 3.19987 16.15 3.65987 15.39L4.80987 13.48C5.04987 13.08 5.26987 12.28 5.26987 11.81V8.92004C5.26987 5.20004 8.29987 2.17004 12.0199 2.17004C15.7399 2.17004 18.7699 5.20004 18.7699 8.92004V11.81C18.7699 12.27 18.9899 13.08 19.2299 13.49L20.3699 15.39C20.7999 16.11 20.8799 16.98 20.5899 17.77C20.2999 18.56 19.6699 19.16 18.8799 19.42C16.6799 20.16 14.3499 20.53 12.0199 20.53ZM12.0199 3.67004C9.12987 3.67004 6.76987 6.02004 6.76987 8.92004V11.81C6.76987 12.54 6.46987 13.62 6.09987 14.25L4.94987 16.16C4.72987 16.53 4.66987 16.92 4.79987 17.25C4.91987 17.59 5.21987 17.85 5.62987 17.99C9.80987 19.39 14.2399 19.39 18.4199 17.99C18.7799 17.87 19.0599 17.6 19.1899 17.24C19.3199 16.88 19.2899 16.49 19.0899 16.16L17.9399 14.25C17.5599 13.6 17.2699 12.53 17.2699 11.8V8.92004C17.2699 6.02004 14.9199 3.67004 12.0199 3.67004Z"
-                                                fill="#96A1C2" />
-                                            <path
-                                                d="M13.8801 3.94005C13.8101 3.94005 13.7401 3.93005 13.6701 3.91005C13.3801 3.83005 13.1001 3.77005 12.8301 3.73005C11.9801 3.62005 11.1601 3.68005 10.3901 3.91005C10.1101 4.00005 9.81011 3.91005 9.62011 3.70005C9.43011 3.49005 9.37011 3.19005 9.48011 2.92005C9.89011 1.87005 10.8901 1.18005 12.0301 1.18005C13.1701 1.18005 14.1701 1.86005 14.5801 2.92005C14.6801 3.19005 14.6301 3.49005 14.4401 3.70005C14.2901 3.86005 14.0801 3.94005 13.8801 3.94005Z"
-                                                fill="#96A1C2" />
-                                            <path
-                                                d="M12.02 22.8101C11.03 22.8101 10.07 22.4101 9.37002 21.7101C8.67002 21.0101 8.27002 20.0501 8.27002 19.0601H9.77002C9.77002 19.6501 10.01 20.2301 10.43 20.6501C10.85 21.0701 11.43 21.3101 12.02 21.3101C13.26 21.3101 14.27 20.3001 14.27 19.0601H15.77C15.77 21.1301 14.09 22.8101 12.02 22.8101Z"
-                                                fill="#96A1C2" />
-                                        </svg>
+                                <li class="nav-item dropdown">
+                                    <a href="" class="nav-link" id="notificationDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        <!-- <i class="bi bi-bell"></i>  -->
+                                        <span>
+                                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M12.0199 20.53C9.68987 20.53 7.35987 20.16 5.14987 19.42C4.30987 19.13 3.66987 18.54 3.38987 17.77C3.09987 17 3.19987 16.15 3.65987 15.39L4.80987 13.48C5.04987 13.08 5.26987 12.28 5.26987 11.81V8.92004C5.26987 5.20004 8.29987 2.17004 12.0199 2.17004C15.7399 2.17004 18.7699 5.20004 18.7699 8.92004V11.81C18.7699 12.27 18.9899 13.08 19.2299 13.49L20.3699 15.39C20.7999 16.11 20.8799 16.98 20.5899 17.77C20.2999 18.56 19.6699 19.16 18.8799 19.42C16.6799 20.16 14.3499 20.53 12.0199 20.53ZM12.0199 3.67004C9.12987 3.67004 6.76987 6.02004 6.76987 8.92004V11.81C6.76987 12.54 6.46987 13.62 6.09987 14.25L4.94987 16.16C4.72987 16.53 4.66987 16.92 4.79987 17.25C4.91987 17.59 5.21987 17.85 5.62987 17.99C9.80987 19.39 14.2399 19.39 18.4199 17.99C18.7799 17.87 19.0599 17.6 19.1899 17.24C19.3199 16.88 19.2899 16.49 19.0899 16.16L17.9399 14.25C17.5599 13.6 17.2699 12.53 17.2699 11.8V8.92004C17.2699 6.02004 14.9199 3.67004 12.0199 3.67004Z"
+                                                    fill="#96A1C2" />
+                                                <path
+                                                    d="M13.8801 3.94005C13.8101 3.94005 13.7401 3.93005 13.6701 3.91005C13.3801 3.83005 13.1001 3.77005 12.8301 3.73005C11.9801 3.62005 11.1601 3.68005 10.3901 3.91005C10.1101 4.00005 9.81011 3.91005 9.62011 3.70005C9.43011 3.49005 9.37011 3.19005 9.48011 2.92005C9.89011 1.87005 10.8901 1.18005 12.0301 1.18005C13.1701 1.18005 14.1701 1.86005 14.5801 2.92005C14.6801 3.19005 14.6301 3.49005 14.4401 3.70005C14.2901 3.86005 14.0801 3.94005 13.8801 3.94005Z"
+                                                    fill="#96A1C2" />
+                                                <path
+                                                    d="M12.02 22.8101C11.03 22.8101 10.07 22.4101 9.37002 21.7101C8.67002 21.0101 8.27002 20.0501 8.27002 19.0601H9.77002C9.77002 19.6501 10.01 20.2301 10.43 20.6501C10.85 21.0701 11.43 21.3101 12.02 21.3101C13.26 21.3101 14.27 20.3001 14.27 19.0601H15.77C15.77 21.1301 14.09 22.8101 12.02 22.8101Z"
+                                                    fill="#96A1C2" />
+                                            </svg>
 
-                                    </span>
-                                    <span class="notificaiton-dot"></span>
-                                </a>
-                                <!-- <ul class="dropdown-menu dropdown-menu-end d-none" aria-labelledby="notificationDropdown">
+                                        </span>
+                                        <span class="notificaiton-dot"></span>
+                                    </a>
+                                    <!-- <ul class="dropdown-menu dropdown-menu-end d-none" aria-labelledby="notificationDropdown">
                                     <li> <a href="" class="dropdown-item"></a>notificaiton1</li>
                                     <li> <a href="" class="dropdown-item"></a>notificaiton2</li>
                                     <li> <a href="" class="dropdown-item"></a>notificaiton3</li>
                                 </ul>  -->
 
-                            </li>
+                                </li>
 
-                            <li class="nav-item dropdown">
-                                <a href="" class="nav-link d-flex align-items-center" id="userDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="../../../assets/img/user-profile.png" class="rounded-circle w-100"
-                                        alt="user profile">
-                                    <span class="ms-2 pt-2">{{profileData.phone}}</span>
-                                    <span class="dropdown-icon ms-2">
-                                        <svg width="26" height="26" viewBox="0 0 26 26" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M13 25.5C19.9036 25.5 25.5 19.9036 25.5 13C25.5 6.09644 19.9036 0.5 13 0.5C6.09644 0.5 0.5 6.09644 0.5 13C0.5 19.9036 6.09644 25.5 13 25.5Z"
-                                                stroke="#96A1C2" />
-                                            <path
-                                                d="M13 14.0598L9.97549 10.5312C9.75233 10.2709 9.39052 10.2709 9.16737 10.5312C8.94421 10.7915 8.94421 11.2137 9.16737 11.474L12.5959 15.474C12.8191 15.7344 13.1809 15.7344 13.4041 15.474L16.8326 11.474C17.0558 11.2137 17.0558 10.7915 16.8326 10.5312C16.6095 10.2709 16.2477 10.2709 16.0245 10.5312L13 14.0598Z"
-                                                fill="#96A1C2" />
-                                        </svg>
+                                <li class="nav-item dropdown">
+                                    <a href="" class="nav-link d-flex align-items-center" id="userDropdown"
+                                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <img src="../../../assets/img/user-profile.png" class="rounded-circle w-100"
+                                            alt="user profile">
+                                        <span class="ms-2 pt-2">{{profileData.phone}}</span>
+                                        <span class="dropdown-icon ms-2">
+                                            <svg width="26" height="26" viewBox="0 0 26 26" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M13 25.5C19.9036 25.5 25.5 19.9036 25.5 13C25.5 6.09644 19.9036 0.5 13 0.5C6.09644 0.5 0.5 6.09644 0.5 13C0.5 19.9036 6.09644 25.5 13 25.5Z"
+                                                    stroke="#96A1C2" />
+                                                <path
+                                                    d="M13 14.0598L9.97549 10.5312C9.75233 10.2709 9.39052 10.2709 9.16737 10.5312C8.94421 10.7915 8.94421 11.2137 9.16737 11.474L12.5959 15.474C12.8191 15.7344 13.1809 15.7344 13.4041 15.474L16.8326 11.474C17.0558 11.2137 17.0558 10.7915 16.8326 10.5312C16.6095 10.2709 16.2477 10.2709 16.0245 10.5312L13 14.0598Z"
+                                                    fill="#96A1C2" />
+                                            </svg>
 
-                                    </span>
-                                </a>
-                                 <!-- <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                                        </span>
+                                    </a>
+                                    <!-- <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                                     <li><a href="" class="dropdown-item">Profile</a></li>
                                     <li><a href="" class="dropdown-item">Settings</a></li>
                                     <li><a href="" class="dropdown-item">Logout</a></li>
                                 </ul>  -->
-                            </li>
+                                </li>
 
-                        </ul>
-                       </ng-template>
-                       
+                            </ul>
+                        </ng-template>
+
                     </div>
                 </div>
             </nav>
