--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -3,7 +3,7 @@
 <div class="section-block-grey">
 	<div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <div class="gradient-left-border">
                     <div class="section-heading">
                         <span>Find the Best Talent Faster</span>
@@ -15,10 +15,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div>
+            <div class="col-md-7">
+                <div class="video-gif">
                     <!-- <img src="../../assets/img/gif/growth_platform.mp4" alt="about_cuttle"> -->
-                     <video class="img-fluid" autoplay loop muted playsinline>
+                     <video class="img-fluid v-right" autoplay loop muted playsinline>
                         <source src="../../assets/img/gif/balance_transfer.mp4" type="video/mp4">
                      </video>
                 </div>
@@ -80,8 +80,8 @@
         <div class="row align-items-center">
             
             <div class="col-md-6">
-                <div>
-                     <video class="img-fluid" autoplay loop muted playsinline>
+                <div class="video-gif">
+                     <video class="img-fluid v-left" autoplay loop muted playsinline>
                         <source src="../../assets/img/gif/growth_platform.mp4" type="video/mp4">
                      </video>
                 </div>
@@ -122,9 +122,9 @@
 					<div class="section-heading-line-left"></div>
 				</div>				
 			</div> -->
-			<div class="col-md-8">
+			<div class="col-md-8 cutom-color-border count-client">
                 <div class="row">
-                    <div class="col-md-8 col-sm-7 col-xs-12">
+                    <div class="col-md-9 col-sm-7 col-xs-12 bg-orange">
                         <div class="row">
                             <div class="col-md-4 col-sm-4 col-xs-12">
                                 <div class="counter-box white-color">
@@ -152,6 +152,185 @@
 	</div>
 </div>
 <!-- Counters Section END -->
+
+
+
+<!-- Progress Bars Section START -->
+<div class="section-block bg-white">
+	<div class="container">
+		<div class="row mx-auto">
+			<div class="col-md-6 col-sm-6 col-xs-12">
+				<div class="section-heading">
+					<span>Our mision</span>
+					<h4>Creating valuable content for creatives all around the world</h4>
+				</div>
+				<div class="text-content-big">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				</div>
+			</div>
+
+            <div class="col-md-6 col-sm-6 col-xs-12">
+				<div class="section-heading">
+					<span>Our Vision</span>
+					<h4>A platform that empowers individuals to improve</h4>
+				</div>
+				<div class="text-content-big">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				</div>
+			</div>
+
+			
+		</div>
+	</div>
+</div>
+<!-- Progress Bars Section END -->
+
+
+<!-- Number Boxes START -->
+<div class="section-block">
+	<div class="container user-guide">
+		<div class="section-heading text-center mb-5">
+			<!-- <span>How We Work</span> -->
+			<h2 class="text-white">User Guide</h2>
+			<p>All you need to do to complete your credit card application is tocomplete the following <br> four steps</p>
+		</div>	
+		<div class="row pt-3 mb-5">
+            <div class="col-md-4 blog2-post-title-cont">
+                <div class="post-prev-title">
+                  <h3 class="text-white">How To Inject Collateral</h3>
+                  <div class="post-prev-info font-DDorange">
+                  Login<span class="slash-divider"> &gt; </span>Collateral Injection
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="blog2-post-prev-text">   
+                  <p class="text-white">Once you have completed the activation process, you will need to mortgaged assets to obtain a credit limit.</p>                    
+                  <ol class="list-group list-group-numbered bg-transparent border-0">
+                    <li class="list-group-item bg-transparent border-0"> Complete register, KYC and activate your PassTo account and log in</li>
+                    <li class="list-group-item bg-transparent border-0"> Click "Collateral Injection" on the page right after login</li>
+                    <li class="list-group-item bg-transparent border-0"> Our system will send a message upon successful injection</li>
+                    <li class="list-group-item bg-transparent border-0"> The account balance will be automatically update</li>
+                </ol>               
+                </div>
+              </div>
+											
+		</div>	
+
+        <div class="row mb-5">
+            <div class="col-md-4 blog2-post-title-cont">
+                <div class="post-prev-title">
+                  <h3 class="text-white">How To Lock The Card Instantly</h3>
+                  <div class="post-prev-info font-DDorange">
+                  Login<span class="slash-divider"> &gt; </span>Lock Card
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="blog2-post-prev-text">   
+                  <p class="text-white">Whether you suspect unauthorized transactions or for any other reason, you can temporarily lock your
+                    credit card to safeguard your fund security. And you are able to unlock your credit card anytime.</p>                    
+                    <ol class="list-group list-group-numbered bg-transparent border-0">
+                        <li class="list-group-item bg-transparent border-0"> Log in to your card account with cuttle card...</li>
+                        <li class="list-group-item bg-transparent border-0"> Click "Lock Card" on the page right after login</li>
+                        <li class="list-group-item bg-transparent border-0"> Click "Lock Card" on the page right after login</li>
+                        <li class="list-group-item bg-transparent border-0"> The card locking will be effective immediately</li>
+                    </ol>             
+                </div>
+              </div>
+			            
+											
+		</div>	
+
+        <div class="row">
+            <div class="col-md-4 blog2-post-title-cont">
+                <div class="post-prev-title">
+                  <h3 class="text-white">How To Report The Lost Of Credit Card</h3>
+                  <div class="post-prev-info font-DDorange">
+                  Login<span class="slash-divider"> &gt; </span>Lost Card
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="blog2-post-prev-text">   
+                  <p class="text-white">In order to safeguard your funds, you should report immediately if your credit card has been lost or stolen.</p>                    
+                  <ol class="list-group list-group-numbered bg-transparent border-0">
+                    <li class="list-group-item bg-transparent border-0"> Go to the PassTo website:  <a>https://cuttlecard.io</a></li>
+                    <li class="list-group-item bg-transparent border-0"> Click the "Lost" button</li>
+                    <li class="list-group-item bg-transparent border-0"> Click the "Send Code" button</li>
+                    <li class="list-group-item bg-transparent border-0"> Enter the OTP(One Time Password) sent to your mobile and click "Confirm"</li>
+                </ol>     
+                <p>After then, we will block your existing credit card and you can either withdraw the balance or transfer the balance
+                    to a new card. Contact our Customer Service to process further procedure</p>     
+                </div>
+              </div>
+			            
+											
+		</div>	
+
+        
+        <div class="row">
+            <div class="mt-1 text-center button_resp">
+                <a href="#" class="primary-button-light button-msm">Apply Now
+                    <span><i class="bi bi-arrow-right px-1"></i></span>
+                </a>
+            </div>
+        </div>
+	</div>
+</div>
+<!-- Number Boxes END -->
+
+<div class="section-block why-cuttle">
+    <div class="container">
+        <!-- Info Section START -->
+
+        <div class="row">
+            <div class="col-md-5 col-sm-6 col-xs-12">
+                <div class="section-heading mt-30">
+                    <!-- <span>Welcome To Our Agency</span> -->
+                    <h4>Manage your services from your mobile</h4>
+                </div>
+                <div class="text-content mt-25">
+                    <p>Download the app to manage your projects, keep track of the progress and complete tasks without procastinating. Stay on track and complete on time!</p>
+                </div>
+                <div class="section-heading row">
+                    <!-- <span>Welcome To Our Agency</span> -->
+                    <h6 class="text-white fw-bold">Get the App</h6>
+                    <div class="col-md-4">
+                        <img src="../../assets/img/google_play.png" alt="">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="../../assets/img/apple_play_store.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-7 col-sm-6 col-xs-12">
+                <img src="assets/img/why_cuttle.png" alt="image" class="w-100">
+            </div>
+        </div>
+<!-- Info Section END -->
+
+
+    </div>
+</div>
+<div class="section-block why-cuttle">
+    <div class="container">
+        <div class="section-heading text-center">
+            <h6 class="text-white opacity-80">Trusted by teams at over 1,000 of the world's leading organizations</h6>
+        </div>
+        <carousel [isAnimated]="true" [itemsPerSlide]="itemsPerSlide" [singleSlideOffset]="singleSlideOffset"
+            [showIndicators]="false">
+            <slide *ngFor="let slide of slides; let index=index">
+                <img [src]="slide.image" alt="image slide" style="display: block; width: 100%;">
+                <!-- <div class="carousel-caption">
+              <h4>Slide {{index}}</h4>
+            </div> -->
+            </slide>
+        </carousel>
+    </div>
+</div>
+
+
 
 
 
