--- a/src/app/user-dashboard/dashboard/dashboard.component.scss
+++ b/src/app/user-dashboard/dashboard/dashboard.component.scss
@@ -111,3 +111,53 @@ li:not(:last-child)::after{
         transform: translateX(0px) translateY(8px) !important;
     }
  }
+
+ .card-background{
+    background-image: url('../../../assets/img/credit_card_user_dashboard.png');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    padding-top: 56.25%;
+    position: relative;
+    border-radius: 8px;
+ }
+ .card-details{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    // display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    padding: 20px;
+    transform:translateX(0px) translateY(55px);
+ }
+ .card-number, .card-holder-head, .card-holder{
+    margin:5px 0;
+ } 
+
+ .card-number{
+    font-size: 16px;
+    font-weight: bold;
+ }
+
+ .card-holder-head{
+    font-size: 12px;
+ }
+
+  .card-holder{
+    font-size: 14px;
+ }
+
+ .bigText{
+    font-size: 26px;
+    font-weight: bold;
+ }
+ .smallText{
+    font-size: 12px;
+    color: #A5A9B4;
+    // font-weight: bold;
+ }
