activation card changes, credit card changes

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -280,7 +280,7 @@
 </div>
 <!-- Number Boxes END -->
 
-<div class="section-block why-cuttle">
+<div class="section-block why-cuttle bg-orange">
     <div class="container">
         <!-- Info Section START -->
 
@@ -291,7 +291,7 @@
                     <h4>Manage your services from your mobile</h4>
                 </div>
                 <div class="text-content mt-25">
-                    <p>Download the app to manage your projects, keep track of the progress and complete tasks without procastinating. Stay on track and complete on time!</p>
+                    <p class="text-white">Download the app to manage your projects, keep track of the progress and complete tasks without procastinating. Stay on track and complete on time!</p>
                 </div>
                 <div class="section-heading row">
                     <!-- <span>Welcome To Our Agency</span> -->
@@ -305,7 +305,7 @@
                 </div>
             </div>
             <div class="col-md-7 col-sm-6 col-xs-12">
-                <img src="assets/img/why_cuttle.png" alt="image" class="w-100">
+                <img src="assets/img/mobile_screen.png" alt="image" class="w-100">
             </div>
         </div>
 <!-- Info Section END -->
