--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -329,6 +329,9 @@
 .section-block-parallax .count-client{
     transform: translate(0%, 30%);
 }
+.why-cuttle img{
+    transform: translate(5%, -13%) !important;
+}
 
 
 
