--- a/src/app/user-dashboard/dashboard/dashboard.component.html
+++ b/src/app/user-dashboard/dashboard/dashboard.component.html
@@ -4,10 +4,10 @@
             <div class="col-md-8">
                 <div class="row">
                     <div class="col-xl-12 box-col-12 mb-3">
-                        <div class="card custom-card py-3">
+                        <div class="card custom-card">
                             <div
-                                class="card-body d-flex flex-column flex-md-row justify-content-between align-items-center">
-                                <div class="card-text mb-3 mb-md-0">
+                                class="row card-body d-flex  flex-column flex-md-row justify-content-between align-items-center">
+                                <div class="col-12 col-md-6 card-text mb-3 mb-md-0">
                                     <p>Credit Available</p>
                                     <span class="amount bigText mx-1">${{credData.balanceInfo?.available}}</span>
                                     <span class="currency smallText mx-1">{{credData.balanceInfo?.currency}}</span>
@@ -16,16 +16,61 @@
                                         <span class="currency">{{credData.balanceInfo?.currency}}</span>
                                     </p> -->
                                 </div>
-                            <div class="">                                  
+                                <div class="col-12 col-md-6">
+                                    <div class="row">
+                                        <div class="col-12 col-md-5">
+                                            <div
+                                                class="pt-1 primary-button button-xs btn-dark-cuttle d-flex align-items-center">
+                                                <span class="mx-1">
+                                                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M14.8337 3.83333H14.0003V3C14.0003 2.33696 13.7369 1.70107 13.2681 1.23223C12.7993 0.763392 12.1634 0.5 11.5003 0.5H3.16699C2.50395 0.5 1.86807 0.763392 1.39923 1.23223C0.930384 1.70107 0.666992 2.33696 0.666992 3V3V13C0.666992 13.663 0.930384 14.2989 1.39923 14.7678C1.86807 15.2366 2.50395 15.5 3.16699 15.5H14.8337C15.4967 15.5 16.1326 15.2366 16.6014 14.7678C17.0703 14.2989 17.3337 13.663 17.3337 13V6.33333C17.3337 5.67029 17.0703 5.03441 16.6014 4.56557C16.1326 4.09673 15.4967 3.83333 14.8337 3.83333ZM3.16699 2.16667H11.5003C11.7213 2.16667 11.9333 2.25446 12.0896 2.41074C12.2459 2.56702 12.3337 2.77899 12.3337 3V3.83333H3.16699C2.94598 3.83333 2.73402 3.74554 2.57774 3.58926C2.42146 3.43298 2.33366 3.22101 2.33366 3C2.33366 2.77899 2.42146 2.56702 2.57774 2.41074C2.73402 2.25446 2.94598 2.16667 3.16699 2.16667V2.16667ZM15.667 10.5H14.8337C14.6126 10.5 14.4007 10.4122 14.2444 10.2559C14.0881 10.0996 14.0003 9.88768 14.0003 9.66667C14.0003 9.44565 14.0881 9.23369 14.2444 9.07741C14.4007 8.92113 14.6126 8.83333 14.8337 8.83333H15.667V10.5ZM15.667 7.16667H14.8337C14.1706 7.16667 13.5347 7.43006 13.0659 7.8989C12.5971 8.36774 12.3337 9.00363 12.3337 9.66667C12.3337 10.3297 12.5971 10.9656 13.0659 11.4344C13.5347 11.9033 14.1706 12.1667 14.8337 12.1667H15.667V13C15.667 13.221 15.5792 13.433 15.4229 13.5893C15.2666 13.7455 15.0547 13.8333 14.8337 13.8333H3.16699C2.94598 13.8333 2.73402 13.7455 2.57774 13.5893C2.42146 13.433 2.33366 13.221 2.33366 13V5.35833C2.60138 5.45251 2.88319 5.50042 3.16699 5.5H14.8337C15.0547 5.5 15.2666 5.5878 15.4229 5.74408C15.5792 5.90036 15.667 6.11232 15.667 6.33333V7.16667Z"
+                                                            fill="white" />
+                                                    </svg>
+
+                                                </span>
+                                                <a (click)="onWallets()"
+                                                    class="button-xs text-white text-decoration-none">
+                                                    Wallets</a>
+                                            </div>
+                                        </div>
+                                        <div class="col-12 col-md-7">
+                                            <div class="pt-1 primary-button button-xs d-flex align-items-center">
+                                                <span class="mx-1">
+                                                    <svg width="12" height="18" viewBox="0 0 12 18" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M7.66684 13.9998C7.88785 13.9998 8.09981 13.912 8.25609 13.7557C8.41237 13.5994 8.50017 13.3875 8.50017 13.1665L8.50017 3.50812L10.4085 5.42479C10.5654 5.58171 10.7783 5.66987 11.0002 5.66987C11.2221 5.66987 11.4349 5.58171 11.5918 5.42479C11.7488 5.26787 11.8369 5.05504 11.8369 4.83312C11.8369 4.61121 11.7488 4.39838 11.5918 4.24146L8.25851 0.908124C8.14132 0.792493 7.99251 0.714162 7.83085 0.683017C7.66919 0.651872 7.50193 0.669308 7.35017 0.733124C7.19799 0.795641 7.06772 0.901805 6.97577 1.03824C6.88383 1.17467 6.83433 1.33527 6.83351 1.49979L6.8335 13.1665C6.8335 13.3875 6.9213 13.5994 7.07758 13.7557C7.23386 13.912 7.44582 13.9998 7.66684 13.9998ZM4.65017 17.2665C4.80235 17.2039 4.93263 17.0978 5.02457 16.9613C5.11652 16.8249 5.16602 16.6643 5.16684 16.4998L5.16684 4.83312C5.16684 4.61211 5.07904 4.40015 4.92276 4.24387C4.76648 4.08759 4.55452 3.99979 4.33351 3.99979C4.11249 3.99979 3.90053 4.08759 3.74425 4.24387C3.58797 4.40015 3.50017 4.61211 3.50017 4.83312L3.50017 14.4915L1.59184 12.5748C1.51437 12.4967 1.4222 12.4347 1.32065 12.3924C1.2191 12.3501 1.11018 12.3283 1.00017 12.3283C0.890164 12.3283 0.781242 12.3501 0.679693 12.3924C0.578143 12.4347 0.485977 12.4967 0.408508 12.5748C0.330401 12.6523 0.268404 12.7444 0.226097 12.846C0.18379 12.9475 0.162008 13.0564 0.162008 13.1665C0.162008 13.2765 0.18379 13.3854 0.226097 13.4869C0.268404 13.5885 0.330401 13.6807 0.408508 13.7581L3.74184 17.0915C3.85902 17.2071 4.00784 17.2854 4.16949 17.3166C4.33115 17.3477 4.49841 17.3303 4.65017 17.2665V17.2665Z"
+                                                            fill="white" />
+                                                    </svg>
+                                                </span>
+                                                <a (click)="onCollateralInj()"
+                                                    class="button-xs text-white text-decoration-none">
+
+                                                    Collateral Injection</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- <div class="">   
+                                <a (click)="onCollateralInj()" class="primary-button  button-xs mx-2 btn-dark-cuttle text-white">
+                                    <span class="mx-1">
+                                        <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.8337 3.83333H14.0003V3C14.0003 2.33696 13.7369 1.70107 13.2681 1.23223C12.7993 0.763392 12.1634 0.5 11.5003 0.5H3.16699C2.50395 0.5 1.86807 0.763392 1.39923 1.23223C0.930384 1.70107 0.666992 2.33696 0.666992 3V3V13C0.666992 13.663 0.930384 14.2989 1.39923 14.7678C1.86807 15.2366 2.50395 15.5 3.16699 15.5H14.8337C15.4967 15.5 16.1326 15.2366 16.6014 14.7678C17.0703 14.2989 17.3337 13.663 17.3337 13V6.33333C17.3337 5.67029 17.0703 5.03441 16.6014 4.56557C16.1326 4.09673 15.4967 3.83333 14.8337 3.83333ZM3.16699 2.16667H11.5003C11.7213 2.16667 11.9333 2.25446 12.0896 2.41074C12.2459 2.56702 12.3337 2.77899 12.3337 3V3.83333H3.16699C2.94598 3.83333 2.73402 3.74554 2.57774 3.58926C2.42146 3.43298 2.33366 3.22101 2.33366 3C2.33366 2.77899 2.42146 2.56702 2.57774 2.41074C2.73402 2.25446 2.94598 2.16667 3.16699 2.16667V2.16667ZM15.667 10.5H14.8337C14.6126 10.5 14.4007 10.4122 14.2444 10.2559C14.0881 10.0996 14.0003 9.88768 14.0003 9.66667C14.0003 9.44565 14.0881 9.23369 14.2444 9.07741C14.4007 8.92113 14.6126 8.83333 14.8337 8.83333H15.667V10.5ZM15.667 7.16667H14.8337C14.1706 7.16667 13.5347 7.43006 13.0659 7.8989C12.5971 8.36774 12.3337 9.00363 12.3337 9.66667C12.3337 10.3297 12.5971 10.9656 13.0659 11.4344C13.5347 11.9033 14.1706 12.1667 14.8337 12.1667H15.667V13C15.667 13.221 15.5792 13.433 15.4229 13.5893C15.2666 13.7455 15.0547 13.8333 14.8337 13.8333H3.16699C2.94598 13.8333 2.73402 13.7455 2.57774 13.5893C2.42146 13.433 2.33366 13.221 2.33366 13V5.35833C2.60138 5.45251 2.88319 5.50042 3.16699 5.5H14.8337C15.0547 5.5 15.2666 5.5878 15.4229 5.74408C15.5792 5.90036 15.667 6.11232 15.667 6.33333V7.16667Z" fill="white"/>
+                                            </svg>
+                                            
+                                    </span>
+                                    Wallets</a>                              
                                         
-                                    <a (click)="onCollateralInj()" class="primary-button button-sm">
+                                    <a (click)="onCollateralInj()" class="primary-button button-xs mx-2">
                                         <span class="mx-1">
                                             <svg width="12" height="18" viewBox="0 0 12 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M7.66684 13.9998C7.88785 13.9998 8.09981 13.912 8.25609 13.7557C8.41237 13.5994 8.50017 13.3875 8.50017 13.1665L8.50017 3.50812L10.4085 5.42479C10.5654 5.58171 10.7783 5.66987 11.0002 5.66987C11.2221 5.66987 11.4349 5.58171 11.5918 5.42479C11.7488 5.26787 11.8369 5.05504 11.8369 4.83312C11.8369 4.61121 11.7488 4.39838 11.5918 4.24146L8.25851 0.908124C8.14132 0.792493 7.99251 0.714162 7.83085 0.683017C7.66919 0.651872 7.50193 0.669308 7.35017 0.733124C7.19799 0.795641 7.06772 0.901805 6.97577 1.03824C6.88383 1.17467 6.83433 1.33527 6.83351 1.49979L6.8335 13.1665C6.8335 13.3875 6.9213 13.5994 7.07758 13.7557C7.23386 13.912 7.44582 13.9998 7.66684 13.9998ZM4.65017 17.2665C4.80235 17.2039 4.93263 17.0978 5.02457 16.9613C5.11652 16.8249 5.16602 16.6643 5.16684 16.4998L5.16684 4.83312C5.16684 4.61211 5.07904 4.40015 4.92276 4.24387C4.76648 4.08759 4.55452 3.99979 4.33351 3.99979C4.11249 3.99979 3.90053 4.08759 3.74425 4.24387C3.58797 4.40015 3.50017 4.61211 3.50017 4.83312L3.50017 14.4915L1.59184 12.5748C1.51437 12.4967 1.4222 12.4347 1.32065 12.3924C1.2191 12.3501 1.11018 12.3283 1.00017 12.3283C0.890164 12.3283 0.781242 12.3501 0.679693 12.3924C0.578143 12.4347 0.485977 12.4967 0.408508 12.5748C0.330401 12.6523 0.268404 12.7444 0.226097 12.846C0.18379 12.9475 0.162008 13.0564 0.162008 13.1665C0.162008 13.2765 0.18379 13.3854 0.226097 13.4869C0.268404 13.5885 0.330401 13.6807 0.408508 13.7581L3.74184 17.0915C3.85902 17.2071 4.00784 17.2854 4.16949 17.3166C4.33115 17.3477 4.49841 17.3303 4.65017 17.2665V17.2665Z" fill="white"/>
                                                 </svg>
                                         </span>
                                         Collateral Injection</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -218,8 +263,11 @@
                                 <div
                                     class="card-body flex-column flex-md-row justify-content-between align-items-center">
                                     <div class="d-flex spend-limit">
-                                        <p class="mx-2">Daily Spending Limit : <span class="fw-bold">${{credData.cardTxnRuleInfo?.maxDailyPurchaseLimit}}</span></p>
-                                        <p class="mx-2 my-0">Daily ATM Withdrawal Limit : <span class="fw-bold">${{credData.cardTxnRuleInfo?.maxDailyAtmLimit}}</span>
+                                        <p class="mx-2">Daily Spending Limit : <span
+                                                class="fw-bold">${{credData.cardTxnRuleInfo?.maxDailyPurchaseLimit}}</span>
+                                        </p>
+                                        <p class="mx-2 my-0">Daily ATM Withdrawal Limit : <span
+                                                class="fw-bold">${{credData.cardTxnRuleInfo?.maxDailyAtmLimit}}</span>
                                         </p>
                                     </div>
 
@@ -313,8 +361,33 @@
                                 <div class="col-md-12">
                                     <div class="card-background">
                                         <div class="card-details">
+                                            <div class="d-flex justify-content-between align-items-center mb-1">
+                                                <div class="card-number">
+                                                    <span class="me-5">**** **** **** 1234</span>
+                                                    <i class="bi bi-eye ms-5"></i>
+                                                </div>
+                                                </div>
+                                                <div class="d-flex justify-content-between align-items-center mb-1">
+                                                <div class="valid-thru me-5">
+                                                    <small>Valid Thru</small>
+                                                    <span>12/24</span>
+                                                </div>
+                                           
+                                                <div class="cvv ms-5">
+                                                    <small>CVV</small>
+                                                    <span>123</span>
+                                                </div>
+                                            </div>
+                                            <div class="d-flex justify-content-between align-items-center mb-1">
+                                                <div class="card-holder">
+                                                    <small>Card Holder</small>
+                                                    <div>Prabhas Mishra</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="card-details">
                                             <div class="card-number">
-                                                2984   5633   7859   4141
+                                                2984 5633 7859 4141
                                             </div>
                                             <div class="card-holder-head">
                                                 Card Holder
@@ -322,7 +395,7 @@
                                             <div class="card-holder">
                                                 Prabhas Mishra
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                                 <!-- <a class="col-md-12 col-xl-12" (click)="getCardSensitiveInfo()">
