--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,8 +1,8 @@
 <app-header [profileData]="profileData"></app-header>
 <section class="user-dashboard">
     <div class="container">
-        <router-outlet></router-outlet>
+        <router-outlet></router-outlet> 
     </div>
 </section>
-<app-faq></app-faq>
+<!-- <app-faq></app-faq> -->
 <app-footer></app-footer>
