--- a/src/app/user-dashboard/dashboard/dashboard.component.scss
+++ b/src/app/user-dashboard/dashboard/dashboard.component.scss
@@ -133,7 +133,7 @@ li:not(:last-child)::after{
     align-items: center;
     color: white;
     padding: 20px;
-    transform:translateX(0px) translateY(55px);
+    transform:translateX(0px) translateY(30px);
  }
  .card-number, .card-holder-head, .card-holder{
     margin:5px 0;
@@ -161,3 +161,15 @@ li:not(:last-child)::after{
     color: #A5A9B4;
     // font-weight: bold;
  }
+
+ .btn-dark-cuttle {
+    background-color: #2E335B;
+    border-color: #2E335B;
+  }
+  .btn-dark-cuttle:hover{
+    background-color: #BE7B2E;
+    border-color: #BE7B2E;
+  }
+  .custom-color-orange{
+    color:#BE7B2E;
+  }
