--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -13,11 +13,11 @@
         <input class="form-control" formControlName="phone" type="text" id="phoneNumber" name="phoneNumber" required placeholder="7457413014">
       </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label class="col-form-label text-white">Verification Code</label>
       <input class="form-control" formControlName="verificationCode" type="password" name="login[password]" placeholder="Verification Code">
       <div class="show-hide"><a (click)="onSendOTP()"><span class="show"> </span></a></div>
-    </div>
+    </div> -->
     <div class="form-group">
       <label class="col-form-label text-white">Password</label>
       <input class="form-control" formControlName="password" [type]="showhidePswd" name="login[password]" required="" placeholder="*********">
