--- a/src/app/user-dashboard/active-card/active-card.component.html
+++ b/src/app/user-dashboard/active-card/active-card.component.html
@@ -58,11 +58,11 @@
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header border-0">
+      <div class="modal-content modal-bg">
+        <!-- <div class="modal-header border-0">
           <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
+        </div> -->
         <div class="modal-body">
           <div class="success_check">
             <div class="text-center">
