--- a/src/app/user-dashboard/active-card/active-card.component.html
+++ b/src/app/user-dashboard/active-card/active-card.component.html
@@ -57,7 +57,7 @@
                                             
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content modal-bg">
         <!-- <div class="modal-header border-0">
           <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
@@ -65,22 +65,26 @@
         </div> -->
         <div class="modal-body">
           <div class="success_check">
-            <div class="text-center">
-                <img src="../../../assets/img/success_modal_check.png" alt="" class="img-fluid">
+            <div class="row">
+                <div class="col-md-3 mx-auto">
+                    <div class="text-center">
+                        <img src="../../../assets/img/gif/card_check_success.gif" alt="" class="img-fluid">
+                    </div>
+                </div>
             </div>
-            <div class="section-heading">
-                <h4 class="">Activated Successfully</h4>
-                <p>
-                    Your new card has been activated <br> 
-                    Successfully. <br> 
-                    Start spending your money. 🎉
+            
+            <div class="section-heading text-center">
+                <h4 class=""> Success</h4>
+                
+                <p class="text-white">
+                    Your card have been activated successfully.
                 </p>
             </div>
           </div>
         </div>
-        <div class="modal-footer border-0">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+        <div class="modal-footer border-0 d-flex justify-content-center">
+         
+          <button type="button" class="btn btn-orange">Done</button>
         </div>
       </div>
     </div>
